# cdp-browse

./: .gitignore  PYPI_GUIDE.md  README.md  README_CN.md  SKILL.md  download-extension.sh  install.py  publish.sh  pyproject.toml  release.py
cdp_sdk/: SKILL.md  __init__.py  client.py  install.py  page.py
cdp_sdk/agents/: openai.yaml
examples/: CHROME_EXTENSION_GUIDE.md
examples/mcp-stdio/: ARCHITECTURE.md  client.js  server.js
extension/: background.js  config.js  content.js  disable_dialogs.js  manifest.json  popup.html  popup.js
