[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cdp-browse"
version = "0.2.0"
description = "Chrome browser control SDK via CDP-Bridge"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[tool.setuptools.packages.find]
include = ["cdp_sdk*"]
