[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cdp-browse"
version = "0.2.6"
description = "Chrome browser control SDK via CDP-Bridge"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.scripts]
cdp-browse = "cdp_sdk.install:main"

[tool.setuptools.packages.find]
include = ["cdp_sdk*"]

[tool.setuptools.package-data]
cdp_sdk = ["SKILL.md", "agents/*.yaml"]
